# txt_file_compressor

./: .gitignore  CMakeLists.txt  README.md
inc/: README.md
res/: README.md  small.txt
src/: CMakeLists.txt  README.md
src/datastructures/: compressHoff.c  compressHoff.h  priorityQueue.c  priorityQueue.h
tests/: CMakeLists.txt
tests/datastructures/: testCompressHoff.c  testPriorityQueue.c  testUtils.h
tests/testRes/: smallTest.txt
txt_file_compressor-exe/: CMakeLists.txt  main.c
